injectable/tests/ui/resolve_ctx_direct_call.stderr
error[E0599]: no method named `resolve` found for reference `&injectable::ResolveContext` in the current scope
 --> tests/ui/resolve_ctx_direct_call.rs
  |
  |     let _db = ctx.resolve::<Database>().await?;
  |                   ^^^^^^^ method not found in `&ResolveContext`
